--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,13 @@ services:
 #      - "ROS_HOSTNAME=talker"
 #      - "ROS_MASTER_URI=http://master:11311"
     command: rosrun roscpp_tutorials talker
+
+  listener:
+    network_mode: host
+#    build: .
+    image: hri/ros:ros-tutorials
+    container_name: listener
+#    environment:
+#      - "ROS_HOSTNAME=listener"
+#      - "ROS_MASTER_URI=http://master:11311"
+    command: rosrun roscpp_tutorials listener
